--- a/mainwindow.glade
+++ b/mainwindow.glade
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.3 on Thu Apr  3 22:19:26 2008 -->
+<!--Generated with glade3 3.4.3 on Thu Apr  3 22:33:01 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="tekkaMainwindow">
-    <property name="width_request">450</property>
-    <property name="height_request">350</property>
+    <property name="width_request">550</property>
+    <property name="height_request">450</property>
     <property name="visible">True</property>
     <child>
       <widget class="GtkVBox" id="vbox1">
@@ -83,6 +83,16 @@
               <widget class="GtkVBox" id="vbox2">
                 <property name="visible">True</property>
                 <child>
+                  <widget class="GtkEntry" id="tekkaTopic">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <signal name="activate" handler="tekkaTopic_activate_cb"/>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                  </packing>
+                </child>
+                <child>
                   <widget class="GtkScrolledWindow" id="scrolledwindow1">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
@@ -98,6 +108,9 @@
                       </widget>
                     </child>
                   </widget>
+                  <packing>
+                    <property name="position">1</property>
+                  </packing>
                 </child>
                 <child>
                   <widget class="GtkEntry" id="tekkaInput">
@@ -108,7 +121,7 @@
                   </widget>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="position">1</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
               </widget>
