tekka: bug fixes and nicklist-signal Nicklist signal added so there can be actions with users in the future. Fixed bugs in quit/join-Signals and fully implemented away/back. Hope Suraia implements own_away_message() soon.

--- a/mainwindow.glade
+++ b/mainwindow.glade
@@ -167,6 +167,7 @@
                         <property name="can_focus">False</property>
                         <property name="headers_clickable">True</property>
                         <signal name="row_activated" handler="tekkaNicklist_row_activated_cb"/>
+						<signal name="button_press_event" handler="tekkaNicklist_button_press_event_cb"/>
                       </widget>
                     </child>
                   </widget>
