--- a/mainwindow.glade
+++ b/mainwindow.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.3 on Fri Apr 25 21:53:11 2008 -->
+<!--Generated with glade3 3.4.3 on Fri May  9 16:08:58 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="tekkaMainwindow">
     <property name="width_request">550</property>
@@ -82,6 +82,7 @@
             <property name="can_focus">True</property>
             <child>
               <widget class="GtkVBox" id="vbox2">
+                <property name="width_request">400</property>
                 <property name="visible">True</property>
                 <child>
                   <widget class="GtkEntry" id="tekkaTopic">
@@ -101,9 +102,7 @@
                     <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                     <child>
                       <widget class="GtkTextView" id="tekkaOutput">
-                        <property name="width_request">400</property>
                         <property name="visible">True</property>
-						<property name="can_focus">False</property>
                         <property name="editable">False</property>
                         <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
                         <property name="cursor_visible">False</property>
@@ -130,18 +129,19 @@
                 </child>
               </widget>
               <packing>
-                <property name="resize">False</property>
-                <property name="shrink">True</property>
+                <property name="resize">True</property>
+                <property name="shrink">False</property>
               </packing>
             </child>
             <child>
               <widget class="GtkVPaned" id="vpaned2">
+                <property name="width_request">150</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="position_set">True</property>
                 <child>
                   <widget class="GtkScrolledWindow" id="sw_servertree">
-                    <property name="width_request">180</property>
+                    <property name="height_request">180</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
@@ -157,6 +157,7 @@
                 </child>
                 <child>
                   <widget class="GtkScrolledWindow" id="scrolledwindow3">
+                    <property name="width_request">180</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
@@ -171,14 +172,14 @@
                     </child>
                   </widget>
                   <packing>
-                    <property name="resize">False</property>
+                    <property name="resize">True</property>
                     <property name="shrink">True</property>
                   </packing>
                 </child>
               </widget>
               <packing>
                 <property name="resize">False</property>
-                <property name="shrink">True</property>
+                <property name="shrink">False</property>
               </packing>
             </child>
           </widget>
